docker: make the panel height fix container specific The container image panel is the only place where this manifests, so make it specific to that and avoid breaking other places of Cockpit.

--- a/pkg/base1/cockpit.css
+++ b/pkg/base1/cockpit.css
@@ -291,8 +291,7 @@ a {
 }
 
 .panel-heading {
-   min-height: 44px;
-   height: auto;
+   height: 44px;
 }
 
 /* Vertically center dropdown buttons in panel headers */
