--- a/pkg/kubernetes/views/add-member-role-dialog.html
+++ b/pkg/kubernetes/views/add-member-role-dialog.html
@@ -9,9 +9,10 @@
                     <label class="control-label" for="add_member" translatable="yes">User or Group</label>
                 </td>
                 <td>
-                    <div id="add_member_group" class="input-group bootstrap-select form-control" dropdown>
+                    <div id="add_member_group" class="input-group bootstrap-select input-combo form-control" dropdown>
                         <input id="add_member_name" class="form-control" type="text" placeholder="Select Member"
                             ng-model="select.member">
+                          <span class="input-group-btn" dropdown="">
                         <button id="add_member" class="btn btn-default dropdown-toggle" dropdown-toggle>
                             <span class="caret"></span>
                         </button>
@@ -22,6 +23,7 @@
                                 </a>
                             </li>
                         </ul>
+                          </span>
                     </div>
 <!--                     <div id="add_member" class="btn-group bootstrap-select form-control" dropdown>
                         <button class="btn btn-default dropdown-toggle" dropdown-toggle>
