kubernetes: Fix image layers direction arrow appearance

--- a/pkg/kubernetes/styles/layers.less
+++ b/pkg/kubernetes/styles/layers.less
@@ -7,7 +7,12 @@ image-layers {
 
 ul.image-layers {
     list-style: none;
-    border-left: 2px solid #d3d3d3;
+    background-image: -webkit-linear-gradient(top, #fff 12px, #d3d3d3 15px);
+    background-image: -moz-linear-gradient(top, #fff 12px, #d3d3d3 15px);
+    background-image: -o-linear-gradient(top, #fff 12px, #d3d3d3 15px);
+    background-image: linear-gradient(top, #fff 12px, #d3d3d3 15px);
+    background-size: 2px 100%;
+    background-repeat: no-repeat;
     margin: 15px;
     padding-left: 0px;
     font-size: 13px;
@@ -25,7 +30,7 @@ ul.image-layers {
         display: block;
         color: #0099ff;
         position: relative;
-        left: -9px;
+        left: -7px;
         padding-bottom: 9px;
     }
 
