subscriptions: style fixes for proxy server settings section

--- a/pkg/subscriptions/subscriptions.css
+++ b/pkg/subscriptions/subscriptions.css
@@ -67,7 +67,7 @@
 
 .form-table-ct .form-inline {
     background: #f4f4f4;
-    border-width: 0 1px 1px 1px;
+    border-width: 1px 1px 1px 1px;
     border-style: solid;
     border-color: #bababa;
     padding: 4px;
@@ -75,9 +75,22 @@
 
 .form-group-ct {
     background: #f4f4f4;
-    border-width: 0 1px 1px 1px;
+    border-width: 1px 1px 1px 1px;
     border-style: solid;
     border-color: #bababa;
     padding: 4px;
     width: 100%;
+}
+
+.form-group-ct tr td:last-child {
+    padding-right: 4px;
+}
+
+.form-group-ct tr:first-child td:last-child {
+    padding-top: 6px;
+}
+
+.form-group-ct tr:last-child td:last-child {
+    padding-bottom: 6px;
+    padding-top:;
 }
