--- a/pkg/docker/docker.css
+++ b/pkg/docker/docker.css
@@ -3,6 +3,19 @@
     margin-bottom: 1.5em;
 }
 
+
+.listing-ct-body {
+    padding: 0px;
+}
+
+.listing-ct-body .listing-ct-body {
+    padding: 20px 25px;
+}
+
+.list-group-item .pficon {
+    margin: 5px;
+}
+
 .listing-ct-item .pficon {
     position: relative;
     top: 3px;
