--- a/pkg/docker/docker.css
+++ b/pkg/docker/docker.css
@@ -12,6 +12,10 @@
     padding: 20px 25px;
 }
 
+.listing-ct-body .dialog-list-ct {
+    margin: 20px;
+}
+
 .list-group-item .pficon {
     margin: 5px;
 }
